@@ -1,0 +1,1 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2004/11/01 21:50:40 jdolecek Exp $
